--- a/style.css
+++ b/style.css
@@ -1,152 +1,1 @@
-/* ローディング画面背景 */
-.loader-bg {
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 9999;
-      background-color: rgb(189, 189, 189);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-/* ローディングアニメーション */
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
-.loader {
-  margin: 60px auto;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.95);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.95);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.95);
-  border-left: 1.1em solid #040404;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
-}
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-body {
-      background-color : rgb(189, 189, 189);
-      padding: 30px;
-}
-.starter-template {
-      padding: 40px 20px;
-      background-color: white;
-}
-
-h1   {
-      color: #000;
-      -webkit-text-stroke: 0.5px #fff;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-p    {
-      font-weight: bold;
-      font-size: 120%;
-      font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.title {
-      text-align: center;
-}
-.top_btn {
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      width: 40px;
-      height: 40px;
-      margin: 0 auto;
-      background: #e0ffff;
-      border-radius: 50%;
-      line-height: 40px;
-}
-
-.githubLink {
-      text-align: center;
-}
-.btnSketch {
-      display: block;
-	margin: auto;
-}
-.sketch {
-      display: flex;
-	justify-content: center;
-}
-.img-blockGame {
-      width: 600px;
-      height: 400px;
-      display: block;
-	margin: auto;
-}
-
-.profileStyle {
-      text-align: center;
-}
-.aboutStyle {
-      text-align: center;
-}
-.worksStyle {
-      text-align: center;
-}
-
-.fa-handshake-simple {
-      color: rgb(123, 240, 121);
-}
-.fa-person-circle-question {
-      color: rgb(237, 166, 52);
-}
-.fa-person-circle-exclamation {
-      color: rgb(243, 77, 77);
-}
-.bi-git {
-      color: rgb(248, 60, 2);
-}
-.bi-google {
-      color: rgb(221,81,68);
-}
-.row {
-      line-height: 1.75;
-      padding: 0.5em 0;
-}
-
-/* フェードイン(初期値) */
-.js-fadeUp {
-      opacity: 0; /* 最初は非表示 */
-      transform: translateY(30px); /* 下に30pxの位置から */
-      transition: opacity .8s, transform .8s; /* 透過率と縦方向の移動を0.8秒 */
-}
-/* フェードイン(スクロールした後) */
-.js-fadeUp.is-inview {
-      opacity: 1; /* 表示領域に入ったら表示 */
-      transform: translateY(0); /* 30px上に移動する */
-      transition-delay: .5s; /* フェード開始を0.5秒遅らせる */
-}
+.loader-bg{width:100vw;height:100vh;position:fixed;top:0;left:0;z-index:9999;background-color:#bdbdbd;display:flex;justify-content:center;align-items:center}.loader,.loader:after{border-radius:50%;width:10em;height:10em}.loader{margin:60px auto;font-size:10px;position:relative;text-indent:-9999em;border-top:1.1em solid rgba(255,255,255,.95);border-right:1.1em solid rgba(255,255,255,.95);border-bottom:1.1em solid rgba(255,255,255,.95);border-left:1.1em solid #040404;transform:translateZ(0);animation:load8 1.1s infinite linear}@keyframes load8{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}.row{line-height:1.75;padding:.5em 0}body{background-color:#bdbdbd;padding:30px}body .starter-template{padding:40px 20px;background-color:#fff}body .starter-template .profileStyle{text-align:center}body .starter-template .aboutStyle{text-align:center}body .starter-template .aboutStyle .fa-handshake-simple{color:#7bf079}body .starter-template .aboutStyle .fa-person-circle-question{color:#eda634}body .starter-template .aboutStyle .fa-person-circle-exclamation{color:#f34d4d}body .starter-template .aboutStyle .bi-git{color:#f83c02}body .starter-template .aboutStyle .bi-google{color:#dd5144}body .starter-template .worksStyle{text-align:center}h1{color:#000;-webkit-text-stroke:.5px #fff;font-family:"Franklin Gothic Medium","Arial Narrow",Arial,sans-serif}p{font-weight:bold;font-size:120%;font-family:Georgia,"Times New Roman",Times,serif}.title{text-align:center}.top_btn{position:fixed;bottom:30px;right:30px;width:40px;height:40px;margin:0 auto;background:#e0ffff;border-radius:50%;line-height:40px}.githubLink{text-align:center}.btnSketch{display:block;margin:auto}.sketch{display:flex;justify-content:center}.img-blockGame{width:600px;height:400px;display:block;margin:auto}.js-fadeUp{opacity:0;transform:translateY(30px);transition:opacity .8s,transform .8s}.js-fadeUp.is-inview{opacity:1;transform:translateY(0);transition-delay:.5s}/*# sourceMappingURL=style.css.map */
