Zennのリンクを追加

--- a/style.scss
+++ b/style.scss
@@ -131,6 +131,9 @@ p    {
 .githubLink {
   @include textPosition;
 }
+.zennLink {
+  @include textPosition;
+}
 .btnSketch {
   @include imagePosition;
 }
