--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,6 @@
+$tb:959;
+$sp:480;
+
 @mixin textPosition {
   text-align: center;
 }
@@ -7,10 +10,16 @@
   margin: auto;
 }
 
+@mixin mq($bp){
+  @media screen and (max-width: #{$bp}px){
+      @content;
+  }
+}
+
 /* ローディング画面背景 */
 .loader-bg {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -69,11 +78,35 @@
   padding: 0.5em 0;
 }
 
+.titleArea {
+  width: 100%;
+  height: 150px;
+  @include mq($tb){
+    height: 140px;
+  }
+  @include mq($sp){
+    height: 130px;
+    padding-top: 10%;
+  }
+}
+
 body {
   background-color : rgb(189, 189, 189);
   padding: 30px;
+  @include mq($tb){
+    padding: 15px;
+  }
+  @include mq($sp){
+    padding: 10px;
+  }
   .starter-template {
     padding: 40px 20px;
+    @include mq($tb){
+      padding: 300px 200px;
+    }
+    @include mq($sp){
+      padding: 20px 10px;
+    }
     background-color: white;
     .profileStyle {
       @include textPosition;
@@ -111,15 +144,46 @@ p    {
   font-weight: bold;
   font-size: 120%;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  @include mq($tb){
+    font-size: 1.0em;
+  }
+  @include mq($sp){
+    font-size: 0.8em;
+  }
+}
+.portfolioLang {
+  @include mq($tb){
+    font-size: 0.7em;
+  }
+  @include mq($sp){
+    font-size: 0.6em;
+  }
 }
 
 .titleLogo {
   width: 500px;
   height: 125px;
   @include imagePosition;
+  @include mq($tb){
+    width: 300px;
+    height: 100px;
+    @include imagePosition;
+  }
+  @include mq($sp){
+    width: 230px;
+    height: 70px;
+  }
 }
 .title {
   @include textPosition;
+}
+.titleMessage {
+  @include mq($tb){
+    font-size: 0.9em;
+  }
+  @include mq($sp){
+    font-size: 0.6em;
+  }
 }
 .top_btn {
   position: fixed;
@@ -131,6 +195,10 @@ p    {
   background: #e0ffff;
   border-radius: 50%;
   line-height: 40px;
+}
+
+.list-group {
+  font-size: 0.6em;
 }
 
 .githubLink {
@@ -150,11 +218,31 @@ p    {
   width: 600px;
   height: 400px;
   @include imagePosition;
+  @include mq($tb){
+    width: 230px;
+    height: 260px;
+    @include imagePosition;
+  }
+  @include mq($sp){
+    width: 180px;
+    height: 200px;
+    @include imagePosition;
+  }
 }
 .img-3dDog {
   width: 600px;
   height: 400px;
   @include imagePosition;
+  @include mq($tb){
+    width: 230px;
+    height: 260px;
+    @include imagePosition;
+  }
+  @include mq($sp){
+    width: 180px;
+    height: 200px;
+    @include imagePosition;
+  }
 }
 
 /* フェードイン(初期値) */
