--- a/css/style.scss
+++ b/css/style.scss
@@ -131,6 +131,8 @@ body {
     }
     .worksStyle {
       @include textPosition;
+      padding-top: 5em;
+      text-align: center;
     }
   }
 }
@@ -309,6 +311,20 @@ p    {
   text-align: center;
 }
 .presentButton {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 15px 30px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  text-decoration: none;
+  :hover {
+    background-color: #0056b3;
+  }
+}
+
+.gamePlayButton {
   background-color: #007bff;
   color: white;
   border: none;
