--- a/templates/gameGacha.html
+++ b/templates/gameGacha.html
@@ -4,34 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>今日のゲームジャンルガチャ</title>
+  <script src="../js/gameGenreGachaApp/index.js"></script>
 </head>
 <body>
   <h1>今日のゲームジャンルガチャ</h1>
-  <?php
-    $raritys = [
-      'SSR' =>  300,
-      'SR'  => 1200,
-      'R'   => 8500,
-    ];
-
-    $cards['SSR'] = [ 'アイツ', 'コイツ', ];
-    $cards['SR']  = [ 'イオンリング', 'チルド', 'マザー', 'アイアンメイデン', 'ビッグコア', ];
-    $cards['R']   = [ 'ファン', 'ルグル', 'ガルン', 'ビーンズ', 'ディー01', ];
-
-    $rand = mt_rand(0,10000); // 乱数生成
-
-    $probability = 0;
-    foreach($raritys as $rarity => $rarity_probability){
-      $probability += $rarity_probability;
-      if($rand <= $probability){ // 排出レアリティ確定
-        $result = array_rand( $cards[$rarity], 1 ); // 排出レアリティ内からランダムに1枚取得
-        break;
+  <button onclick="generateRandomNumbers()">ガチャる！</button>
+  <div id="numbers_div"></div>
+  <script>
+    function generateRandomNumbers() {
+      let numbers = [];
+      for (let i = 0; i < 10; i++) {
+        let randomNum = Math.floor(Math.random() * 100);
+        numbers.push(randomNum);
       }
+      let numbersDiv = document.getElementById("numbers_div");
+      numbersDiv.innerHTML = "Random Numbers: " + numbers.join(", ");
     }
-
-// 結果表示
-echo $result;
-  ?>
-
+  </script>
 </body>
 </html>
